k8s/bfp/bfp-api-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bushfire-plan-api
  namespace: bushfire-plan
  labels:
    app: bushfire-plan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bushfire-plan-api
  template:
    metadata:
      labels:
        app: bushfire-plan-api
    spec:
      containers:
      - name: bushfire-plan-api
        image: martinhodges/bushfire-plan-api:latest
