k8s/bfp/bfp-ui-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bfp-app
  namespace: bushfire-plan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bfp-app
  template:
    metadata:
      labels:
        app: bfp-app
    spec:
      imagePullSecrets:
       - name: registrypullsecret
      containers:
        - name: bfp-app
          image: martinhodges/bfp-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: bfp-service
  namespace: bushfire-plan
spec:
  selector:
    app: bfp-app
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
