k8s/bfp/bfp-sec-route.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bfp-sec-ingress
  namespace: bushfire-plan
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.bushfire-plan.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://bfp.b30.online/oauth2/start?rd=$request_uri"
    nginx.ingress.kubernetes.io/auth-proxy-pass-headers: "X-Forwarded-Host,X-Forwarded-Proto"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User,X-Auth-Request-Groups,X-Auth-Request-Access-Token,X-Auth-Request-Email,X-Auth-Request-Preferred-Username"
    nginx.ingress.kubernetes.io/auth-extract-headers: "X-Auth-Request-User,X-Auth-Request-Groups,X-Auth-Request-Access-Token,X-Auth-Request-Email,X-Auth-Request-Preferred-Username"
spec:
  ingressClassName: nginx
  rules:
  - host: bfp.b30.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bfp-service
            port:
              number: 80
